unpackaged/main/default/objects/pw_ccpro__CountryCompleteSettings__c/pw_ccpro__CountryCompleteSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>CountryComplete Settings</label>
</CustomObject>