unpackaged/main/default/objects/pw_ccpro__CountryCompleteSettings__c/fields/pw_ccpro__AlertEmail__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__AlertEmail__c</fullName>
    <label>Alert Email</label>
    <type>Email</type>
</CustomField>