unpackaged/main/default/objects/pw_ccpro__CountryCompleteSettings__c/fields/pw_ccpro__DisabledPages__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__DisabledPages__c</fullName>
    <inlineHelpText>Names of Visualforce pages should be separated by a semicolon and a space</inlineHelpText>
    <label>Disabled Pages</label>
    <length>255</length>
    <type>Text</type>
</CustomField>