unpackaged/main/default/objects/pw_ccpro__CountryCompleteSettings__c/fields/pw_ccpro__DisableLeadTrigger__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__DisableLeadTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Lead Trigger</label>
    <type>Checkbox</type>
</CustomField>