unpackaged/main/default/objects/pw_ccpro__CountryCompleteSettings__c/fields/pw_ccpro__LookupPopulationEnabled__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__LookupPopulationEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Lookup Field Population</label>
    <type>Checkbox</type>
</CustomField>