unpackaged/main/default/objects/pw_ccpro__CountryCompleteSettings__c/fields/pw_ccpro__RunOnce__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__RunOnce__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Run trigger once</label>
    <type>Checkbox</type>
</CustomField>