unpackaged/main/default/objects/pw_ccpro__CountryCompleteSettings__c/fields/pw_ccpro__StandardizationEnabled__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__StandardizationEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Standardization</label>
    <type>Checkbox</type>
</CustomField>