unpackaged/main/default/objects/pw_ccpro__CountryCompleteSettings__c/fields/pw_ccpro__StoreCountryValueAs__c.field-meta.xml
<CustomField>
    <fullName>pw_ccpro__StoreCountryValueAs__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>0 - store as &quot;Name&quot;
1 - store as &quot;ISO 2-letter code&quot;
2 - store as &quot;ISO 3-letter code&quot;</inlineHelpText>
    <label>Store country value as</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>